objects/LAT_Clean_Account_Product_Payment__c.object
<CustomObject>
    <fields>
        <fullName>LAT_ApexJobId__c</fullName>
        <label>Apex Job Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_Country__c</fullName>
        <label>Country</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Timeout</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TimeStamp__c</fullName>
        <label>TimeStamp</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Clean Account Product Payment</label>
    <nameField>
        <displayFormat>CAPP-{00000000}</displayFormat>
        <label>Clean Account Product Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clean Account Product Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>